<resources>
    <string name="app_name">ShoeStore</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="email_address">e-mail Address</string>
    <string name="password">Password</string>
    <string name="instructions">Instructions</string>
    <string name="welcome_text_1">Welcome to Shoe Inventory App.
        From here, you can navigate to the instructions or the list of shoes.</string>
    <string name="welcome_text_2">Press button to continue</string>
    <string name="shoes_list">Shoes List</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="instructions_text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget eros sed est aliquam sagittis. Nullam non quam diam. Etiam laoreet semper enim sed porttitor. Pellentesque neque dolor, faucibus eu ligula id, hendrerit fermentum purus. Duis ac lacinia dolor, non dapibus ipsum. Morbi quis quam euismod, rutrum lacus sed, mollis velit...</string>
    <string name="instructions_text_2">Press button to continue</string>
    <string name="logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="title_welcome">Welcome!</string>
    <string name="title_instructions">Some instructions</string>
    <string name="title_shoes">Shoes list</string>
    <string name="title_shoe_detail">Shoe detail</string>
</resources>
