<?xml version="1.0" encoding="utf-8"?>

<!--
I have chosen a LinearLayout due to the simplicity of the interface.
In this fragment, I needed to show only a set of TextView + EditText stacked vertically;
and LinearLayout is the simplest solution for that kind of task.
I have included an anidated LinearLayout, with horizontal orientation, just to contain
the action buttons.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.navigation.ShoeDetailFragment">

    <data>
        <variable
            name="shoeModel"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/normal_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/normal_font"
            android:text="@string/add_shoe"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_font"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/vertical_margin"/>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textShortMessage"
            android:textSize="@dimen/text_size"
            android:text="@={shoeModel.name}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_font"
            android:text="@string/company"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/companyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/normal_font"
            android:inputType="textShortMessage"
            android:text="@={shoeModel.company}">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_font"
            android:text="@string/size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sizeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/normal_font"
            android:inputType="numberDecimal"
            android:text="@={`` + shoeModel.size}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_font"
            android:text="@string/description"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/normal_font"
            android:minLines="3"
            android:maxLines="4"
            android:text="@={shoeModel.description}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                style="@style/normal_font"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/normal_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</layout>